[roomplanner] Implement hiding the menu and fullscreen display with CSS rather than JS

--- a/modules-available/roomplanner/style.css
+++ b/modules-available/roomplanner/style.css
@@ -1,15 +1,26 @@
 @CHARSET "UTF-8";
 
-body.split #drawpanel {
-	width:60%;
-	float: right;}
+/* override style to make the room planner full screen */
 
+body {
+	width: 100%;
+	margin: 0;
+}
 
-body.full #drawpanel {
-	width:90%;
-	float: none;
-	margin: 0 auto 20px;
-	}
+.sidebar-bg, .navbar {
+	display: none;
+}
+
+#mainpage {
+	position: static;
+	width: 100%;
+	max-width: 100%;
+	left: 0px;
+	top: 0px;
+	margin: 0;
+}
+
+/* end full screen changes */
 
 #drawpanel {
 	position:relative;}
