--- a/modules-available/roomplanner/style.css
+++ b/modules-available/roomplanner/style.css
@@ -4,6 +4,7 @@
 
 body {
 	width: 100%;
+	height: 100%;
 	margin: 0;
 }
 
@@ -33,7 +34,8 @@ body {
 	padding:0;
 	margin: 0;
 	overflow: hidden;
-	height: 350px;}
+	height: 600px;
+}
 
 #scaleContainer {
 	position: absolute;
