--- a/modules-available/locations/templates/location-subnets.html
+++ b/modules-available/locations/templates/location-subnets.html
@@ -60,13 +60,13 @@
 		</table>
 		<br>
 		<div class="btn-group">
-			{{#isLeaf}}
+			{{#roomplanner}}
 			<a class="btn btn-default" href="?do=roomplanner&amp;locationid={{locationid}}"
 							  target="_blank"
 				>
 				<span class="glyphicon glyphicon-move"></span>{{lang_editRoomplan}}
 			</a>
-			{{/isLeaf}}
+			{{/roomplanner}}
 
 		</div>
 		<div class="pull-right">
