[roomplanner] Location name in h1

--- a/modules-available/roomplanner/templates/page.html
+++ b/modules-available/roomplanner/templates/page.html
@@ -42,7 +42,7 @@
 </div> 
 
 <!--  berryous raumplaner -->
-	<h1>{{lang_roomplanner}}</h1>
+<h1>{{lang_roomplanner}} – {{location.locationname}}</h1>
 
 <div class="alert alert-danger" style="display:none" id="error-msg"></div>
 
