[sysconfig] Improve design, hide more controls in location-specific view, get rid of JS hack for ellipsis in tables (by adding a HTML/CSS hack for it :))

--- a/modules-available/sysconfig/templates/cfg-finish.html
+++ b/modules-available/sysconfig/templates/cfg-finish.html
@@ -7,7 +7,7 @@
 	<input type="hidden" name="action" value="config">
 	<input type="hidden" name="activate" value="{{configid}}">
 	<div class="btn-group">
-			<button type="submit" class="btn btn-primary">{{lang_configurationActive}}</button>
-			<a href="?do=SysConfig" class="btn btn-default"> {{lang_configurationActivateLater}}</a>
+		<button type="submit" class="btn btn-primary">{{lang_activateGlobally}}</button>
+		<a href="?do=SysConfig" class="btn btn-default">{{lang_backToSysconfig}}</a>
 	</div>
 </form>
