--- a/modules-available/roomplanner/templates/page.html
+++ b/modules-available/roomplanner/templates/page.html
@@ -311,7 +311,10 @@
 	</div>
 
 <div class="pull-left">
-
+	<div class="input-group" style="width:300px">
+		<div class="input-group-addon">{{lang_managerIp}}</div>
+		<input class="form-control" type="text" id="manager-ip" value="{{managerip}}" placeholder="1.2.3.4">
+	</div>
 </div>
 <div class="pull-right">
 	<button class="btn btn-default" onclick="triggerCancel()">{{lang_cancel}}</button>
