[statistics] Fix currentuser filter

--- a/modules-available/statistics/templates/filterbox.html
+++ b/modules-available/statistics/templates/filterbox.html
@@ -74,7 +74,8 @@ var slxFilterNames = {
 	badsectors: '{{lang_reallocatedSectors}}',
 	clientip: '{{lang_ip}}',
 	state: '{{lang_usageState}}',
-	location: '{{lang_location}}'
+	location: '{{lang_location}}',
+	currentuser: '{{lang_currentUser}}'
 };
 
 slxLocations = {{{locations}}};
