--- a/modules-available/statistics/templates/clientlist.html
+++ b/modules-available/statistics/templates/clientlist.html
@@ -1,7 +1,7 @@
 
 
 
-<h1>{{lang_clientList}}</h1>
+<h1>{{lang_clientList}} ({{rowCount}})</h1>
 
 <table class="table table-condensed table-striped">
 	<tr>
