--- a/modules-available/sysconfig/templates/ad-start.html
+++ b/modules-available/sysconfig/templates/ad-start.html
@@ -13,13 +13,13 @@
 <i>{{lang_asteriskMandatory}}</i>
 
 <form role="form" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{step}}">
-	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="position:absolute;top:-200px" tabindex="-1">
-	<input type="password" name="password_fake" id="password_fake" value=""   style="position:absolute;top:-200px" tabindex="-1">
+	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="position:absolute;top:-2000px" tabindex="-1">
+	<input type="password" name="password_fake" id="password_fake" value=""   style="position:absolute;top:-2000px" tabindex="-1">
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="edit" value="{{edit}}">
 	<div class="input-group">
 		<span class="input-group-addon slx-ga">{{lang_moduleTitle}}</span>
-		<input tabindex="1" name="title" value="{{title}}" type="text" class="form-control">
+		<input tabindex="1" name="title" value="{{title}}" type="text" class="form-control" autofocus>
 	</div>
 	<div class="input-group">
 		<span class="input-group-addon slx-ga">Server *</span>
