[statistics] Show red hdd icon in client list when filtering by ID44 == 0 and machine has no HDD installed at all

--- a/modules-available/statistics/templates/clientlist.html
+++ b/modules-available/statistics/templates/clientlist.html
@@ -82,6 +82,9 @@
 				<span class="glyphicon glyphicon-exclamation-sign"></span>
 				{{badsectors}}
 			</div>{{/badsectors}}
+			{{#nohdd}}<div>
+				<span class="glyphicon glyphicon-hdd red"></span>
+			</div>{{/nohdd}}
 		</td>
 		<td>{{lang_realCores}}: {{realcores}}<div class="small">{{cpumodel}}</div></td>
 	</tr>
