--- a/modules-available/locationinfo/templates/pcsubtable.html
+++ b/modules-available/locationinfo/templates/pcsubtable.html
@@ -2,7 +2,8 @@
 <br>
 <table style="margin-bottom:0px">
 	<tr>
-		<th width=120>{{lang_pcID}}</th>
+		<th width=320>{{lang_pcID}}</th>
+		<th width=120>{{lang_pcIP}}</th>
 		<th width=50>{{lang_pcX}}</th>
     <th width=50>{{lang_pcY}}</th>
 		<th width=20>{{lang_pcInUse}}</th>
@@ -10,7 +11,8 @@
 
 {{#list}}
 	<tr class="tablerow">
-    <td>{{id}}</td>
+		<td>{{id}}</td>
+    <td>{{ip}}</td>
 		<td>{{x}}</td>
 		<td>{{y}}</td>
 		<td align="center">{{inUse}}</td>
