--- a/modules-available/locationinfo/templates/timetable.html
+++ b/modules-available/locationinfo/templates/timetable.html
@@ -1,5 +1,5 @@
 <div>
-  <form method="post" action="?do=locationinfo">
+  <form method="post" action="?do=locationinfo" id="timeForm">
     <input type="hidden" name="token" value="{{token}}">
     <input type="hidden" name="action" value="updateOpeningTime">
     <input type="hidden" name="id" value="{{id}}">
