--- a/modules-available/locations/templates/location-subnets.html
+++ b/modules-available/locations/templates/location-subnets.html
@@ -1,4 +1,4 @@
-<td class="slx-well">
+<div class="slx-well">
 	<div class="slx-bold">{{lang_locationSettings}}</div>
 	<form method="post" action="?do=Locations">
 		<input type="hidden" name="token" value="{{token}}">
